Bug 49904 - pam_fprintd.so segfaults when trying to access the first device where none exists.
Summary: pam_fprintd.so segfaults when trying to access the first device where none ex...
Status: RESOLVED FIXED
Alias: None
Product: libfprint
Classification: Unclassified
Component: fprintd (show other bugs)
Version: unspecified
Hardware: x86-64 (AMD64) Linux (All)
: medium major
Assignee: libfprint-bugs
QA Contact:
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-05-14 05:47 UTC by Didier 'OdyX' Raboud
Modified: 2012-05-14 07:11 UTC (History)
1 user (show)

See Also:
i915 platform:
i915 features:


Attachments
Patch to avoid crashing when trying a login without devices (438 bytes, patch)
2012-05-14 05:47 UTC, Didier 'OdyX' Raboud
Details | Splinter Review
Avoid pam module segfault on login without devices (865 bytes, patch)
2012-05-14 06:33 UTC, Didier 'OdyX' Raboud
Details | Splinter Review

Description Didier 'OdyX' Raboud 2012-05-14 05:47:11 UTC
Created attachment 61611 [details] [review]
Patch to avoid crashing when trying a login without devices

Hi, 

after building fprintd with --enable-pam on current Debian Sid, a test-install on a VirtualBox machine without any fingerprint reader revealed pam_fprint.so segfaults in pam/pam_fprintd.c on line 192 (path = paths[0]) in function *open_device.

The attached patch solves this segfault.

Cheers,

OdyX
Comment 1 Bastien Nocera 2012-05-14 06:22:49 UTC
Could you please use a git formatted patch? This isn't applicable.
Patch looks correct.
Comment 2 Didier 'OdyX' Raboud 2012-05-14 06:33:02 UTC
Created attachment 61617 [details] [review]
Avoid pam module segfault on login without devices

New git-formatted patch as requested.

Cheers,

OdyX
Comment 3 Bastien Nocera 2012-05-14 07:11:34 UTC
Pushed with a few changes.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.